manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amex-backend
  namespace: amex
  annotations:
    keel.sh/match-tag: 'true'
    keel.sh/policy: force
    keel.sh/trigger: poll
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: amex-backend
  template:
    metadata:
      labels:
        app: amex-backend
        logs.bakseter.net/scrape: 'false'
    spec:
      containers:
        - name: amex-backend
          image: ghcr.io/bakseter/amex/backend:latest
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      #     affinity:
      #       podAntiAffinity:
      #         requiredDuringSchedulingIgnoredDuringExecution:
      #           - labelSelector:
      #               matchExpressions:
      #                 - key: app
      #                   operator: In
      #                   values:
      #                     - amex-backend
      #             topologyKey: bakseter.net/physical-node
      securityContext:
        fsGroup: 6666
        runAsNonRoot: true
        runAsGroup: 6666
        runAsUser: 6666
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 6666
