manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amex-backend
  namespace: amex
  labels:
    app: amex-backend
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: amex-backend
  type: ClusterIP
