manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: amex
  namespace: amex
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bakseter-net-gateway
      namespace: tailscale

  hostnames:
    - amex.bakseter.net

  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: amex-frontend
          port: 3000

    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: ''
          kind: Service
          name: amex-backend
          port: 8000
