manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amex
  namespace: amex
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  name: http

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
  tls:
    - hosts:
        - amex
