manifests/backend-ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: amex-backend
  namespace: amex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: amex-backend

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
      toPorts:
        - rules:
            http:
              - path: '/api/.*'
          ports:
            - port: '8000'
              protocol: TCP

  #   # Allow ingress from Prometheus for metrics scraping
  #   - fromEndpoints:
  #       - matchLabels:
  #           k8s:io.kubernetes.pod.namespace: monitoring
  #           app.kubernetes.io/name: prometheus
  #     toPorts:
  #       - rules:
  #           http:
  #             - path: '/metrics'
  #               method: 'GET'
  #         ports:
  #           - port: '8080'
  #             protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: amex-database
      toPorts:
        - rules:
            http: []
          ports:
            - port: '5432'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: '4317'
              protocol: TCP
